--- a/pishi/templates/cat_category.html
+++ b/pishi/templates/cat_category.html
@@ -6,8 +6,9 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> به پیشی&#128008;نیان خوش آمدید</h1>
-                    <p class="lead fw-normal text-white-50 mb-0"> اینجا پر از پیشیه! </p>
+                    <h1 class="display-4 fw-bolder"> {{ category }} </h1>
+                    <br>
+                    <p class="lead fw-normal text-white-50 mb-0"> {{ category.description }} </p>
                 </div>
             </div>
         </header>
