catlog & postform & new_post.html created

--- a/pishi/templates/login.html
+++ b/pishi/templates/login.html
@@ -23,6 +23,7 @@
                       <input type="password" class="form-control" name="password" placeholder="رمز خود را وارد کنید">
                     </div>
                     <button type="submit" class="btn btn-secondary">وارد شدن </button>
+                    <a href="{% url 'signup' %}" class="btn btn-outline-secondary"  role="button" >  حساب کاربری ندارید؟ </a>
                   </form>
             </div>
         </center>
