--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -24,7 +24,7 @@
                     </ul>
                 </li>
 
-                <li class="nav-item"><a class="nav-link" href="#!"> کتلاگ</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'catlog' %}"> کتلاگ</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">کتشاپ </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
