--- a/catlog/templates/catlog_home.html
+++ b/catlog/templates/catlog_home.html
@@ -9,9 +9,9 @@
           </div>
           <br><br>          
          {% if user.is_authenticated %}
-           <a href="{% url 'newpost' %}" class="btn btn-secondary"  role="button" > افزودن پست جدید </a>
+           <a href="{% url 'new_post' %}" class="btn btn-outline-light btn-lg px-3"  role="button" > افزودن پست جدید </a>
          {% else %}
-           <a href="{% url 'login' %}" class="btn btn-secondary"  role="button" >لاگین کن تا پست بزاری!</a>
+           <center><a href="{% url 'login' %}" class="btn btn-outline-light btn-lg px-4"  role="button" >لاگین کن تا پست بزاری!</a></center>
          {% endif %}
     </div>
 </header>
@@ -20,64 +20,22 @@
 <div class="container">
     <div class="row">
         <!-- Blog entries-->
+
         <div class="col-lg-8">
             <!-- Featured blog post-->
+             {% for post in post_list %}
             <div class="card mb-4">
-                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                <a href="{% url 'post_detail' post.pk %}"><img class="card-img-top" src="{{ post.picture.url }}" alt="..." /></a>
                 <div class="card-body">
-                    <div class="small text-muted">January 1, 2023</div>
-                    <h2 class="card-title">Featured Post Title</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                    <a class="btn btn-primary" href="#!">Read more →</a>
+                    <div class="small text-muted">{{ post.writer }},  {{ post.date }}</div>
+                    <a class="text-decoration-none link-dark stretched-link" href="{% url 'post_detail' post.pk %}"><h2 class="card-title">{{ post.title }}</h2></a>
+                    <br>
+                    <p class="card-text">{{ post.excerpt }}</p>
+                    <a class="btn btn-primary" href="{% url 'post_detail' post.pk %}"> →مشاهده پست </a>
                 </div>
             </div>
-            <!-- Nested row for non-featured blog posts-->
-            <div class="row">
-                <div class="col-lg-6">
-                    <!-- Blog post-->
-                    <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                    <!-- Blog post-->
-                    <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <!-- Blog post-->
-                    <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                    <!-- Blog post-->
-                    <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
-                        <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title h4">Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
+
             <!-- Pagination-->
             <nav aria-label="Pagination">
                 <hr class="my-0" />
