--- a/catlog/templates/single_post.html
+++ b/catlog/templates/single_post.html
@@ -86,6 +86,12 @@
                             </div>
                         </div>
                     </div>
+
+                     
+                  {% block sidebar %}
+                   {% include 'catlog_sidebar.html' %}
+                  {% endblock sidebar %}
+
                     <!-- Categories widget-->
                     <div class="card mb-4">
                         <div class="card-header">Categories</div>
