--- a/pishi/templates/login.html
+++ b/pishi/templates/login.html
@@ -22,9 +22,12 @@
                     <div class="mb-3">
                       <input type="password" class="form-control" name="password" placeholder="رمز خود را وارد کنید">
                     </div>
+                    <br>
                     <button type="submit" class="btn btn-secondary">وارد شدن </button>
                     <a href="{% url 'signup' %}" class="btn btn-outline-secondary"  role="button" >  حساب کاربری ندارید؟ </a>
                   </form>
+                  <br><br>
+                  <a href="{% url 'input_email_for_login' %}" class="btn btn-outline-warning"  role="button" > ورود با ایمیل </a>
             </div>
         </center>
     </div>
