--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -26,16 +26,22 @@
 
                 <li class="nav-item"><a class="nav-link" href="{% url 'catlog' %}"> کتلاگ</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">کتشاپ </a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="{% url 'catshop_home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">کتشاپ </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">همه محصولات</a></li>
+                        <li><a class="dropdown-item" href="{% url 'catshop_home' %}">همه محصولات</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Popular Items</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'اسباب-بازی' %}">اسباب بازی ها</a></li>
                         <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
                     </ul>
                 </li>
             </ul>
-            
+            <form class="d-flex">
+                <button class="btn btn-outline-dark" type="submit">
+                    <i class="bi-cart-fill me-1"></i>
+                    سبد خرید
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                </button>
+            </form>
         </div>
     </div>
 </nav>
