related product :model,view & template in cat.html added

--- a/catshop/templates/product.html
+++ b/catshop/templates/product.html
@@ -27,7 +27,7 @@
                             <span> 💰 قیمت: </span>
                             <p class="lead"><strike>{{ product.price | intcomma }}</strike> {{ product.sale_price | intcomma }} تومان</p>
                             {% else %}
-                            <span> قیمت: </span>
+                            <span> 💰 قیمت: </span>
                             <p class="lead">{{ product.price | intcomma }} تومان</p>
                             {% endif %}
                         </div>
