related product updated

--- a/catshop/templates/product.html
+++ b/catshop/templates/product.html
@@ -36,7 +36,8 @@
             </div>
             <br>
             <div class="text-start">
-                <a class="btn btn-outline-dark mt-auto" href="{% url 'catshop_home' %}">بازگشت به صفحه اصلی</a>
+                <a class="btn btn-dark mt-auto" href="{% url 'catshop_home' %}"> رفتن به کتشاپ </a>
+                <a class="btn btn-outline-dark mt-auto" href="{% url 'home' %}">بازگشت به صفحه اصلی</a>
             </div>
         </section>
 
