--- a/pishi/templates/index.html
+++ b/pishi/templates/index.html
@@ -12,7 +12,7 @@
                             <h1 class="display-5 fw-bolder text-white mb-2 "dir="rtl" align="right">به پیشی&#128008;نیان خوش آمدید</h1>
                             <p class="lead fw-normal text-white-50 mb-4" dir="rtl" align="right"> اینجا پر از پیشیه!</p><br><br>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"> کتشاپ </a>
+                                <a class="btn btn-warning btn-lg px-4 me-sm-3" href="{% url 'catshop_home' %}"> کتشاپ </a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="{% url 'catlog' %}"> کتلاگ </a>
                             </div>
                         </div>
