--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -35,13 +35,15 @@
                     </ul>
                 </li>
             </ul>
+
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
-                    <i class="bi-cart-fill me-1"></i>
-                    سبد خرید
-                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
+              <a href="{% url 'cart:cart_detail' %}" class="btn btn-outline-dark">
+                 <i class="bi-cart-fill me-1"></i>
+                 سبد خرید
+                 <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart|length }}</span>
+              </a>
             </form>
+
         </div>
     </div>
 </nav>
