related products in product.html added

--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -71,8 +71,9 @@
 <center>
 <h3 class="container">
     سبد خرید شما خالیست &#129402;
-</h3>
-<br><br><br>
+</h3><br><br><br>
+<div class="container"><a class="btn btn-outline-warning" href="{% url 'catshop_home' %}"><strong>+</strong> افزودن به سبد</a>
+<br><br><br><br>
 </center>
 {% endif %}
 {% endblock %}
