--- a/catshop/templates/catshop_category.html
+++ b/catshop/templates/catshop_category.html
@@ -9,7 +9,7 @@
         <header class="text-bg-dark p-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder"> {{ category }} ها </h1>
+                    <h1 class="display-4 fw-bolder"> {{ category }}  </h1>
                     <p class="lead fw-normal text-white-50 mb-0"> هر چیزی که گربه خونگیت لازم داره رو اینجا بخر!  </p>
                 </div>
             </div>
