--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -6,6 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">خانه</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'search' %}">جستجو</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">درباره من</a></li>
                     
 
@@ -30,8 +31,9 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'catshop_home' %}">همه محصولات</a></li>
                         <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="{% url 'category_summary'  %}">دسته بندی ها </a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'اسباب-بازی' %}">اسباب بازی ها</a></li>
-                        <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                        
                     </ul>
                 </li>
             </ul>
