user profile, change profile, change acount, & change password full added

--- a/catshop/templates/product.html
+++ b/catshop/templates/product.html
@@ -40,7 +40,7 @@
                                 <input type="submit" value="افزودن به سبد خرید" class="btn btn-warning mt-auto">
                             </form>
                              {% else %}
-                              <p class="text-danger fw-bold">اتمام موجودی</p>
+                              <p class="text-danger fw-bold">اتمام موجودی:(</p>
                              {% endif %}
                             
                         </div>
