--- a/pishi/templates/navbar.html
+++ b/pishi/templates/navbar.html
@@ -11,6 +11,15 @@
                     
 
                 {% if user.is_authenticated %}
+                 
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false"> پروفایل </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="{% url 'update_user' %}">  پروفایل کاربری  </a></li><li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="{% url 'update_info' %}">  اطلاعات کاربری </a></li>
+                    </ul>
+                </li>
+
                  <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"> خارج شدن </a></li>
                 {% else %}
                  <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">  وارد شدن </a></li>
@@ -20,7 +29,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false"> پیشینیان </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="{% url 'home' %}"> صفحه اصلی  </a></li>
+                        <li><a class="dropdown-item" href="{% url 'home' %}"> صفحه اصلی  </a></li><li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" href="{% url 'cat_categorys' %}"> دسته بندی ها </a></li>
                     </ul>
                 </li>
